# binance-aum-fetch

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: aum.rs  binance_client.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  output.rs  pricing.rs
